updating the github pages

--- a/search.html
+++ b/search.html
@@ -1,7 +1,4 @@
 
-<!-- This layout has been taken from http://globus.org/provision/ -->
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -51,7 +48,7 @@ body {
 <table>
   <tr>
     <td>
-      <a href="index.html"><img src="_static/logo_grid_y.png" border="0" alt="FutureGrid Move"/></a>
+      <a href="index.html"><img src="_static/logo_grid_glow.png" border="0" alt="FutureGrid Move"/></a>
     </td>
     <td>
       <font size="6" color="white"><b><i>FutureGrid</i></b></font><br><br>
